# crystal-sphinx

./: .gitignore  .gitmodules  README.md  RenderGraphMockup.drawio
core/: Cargo.toml  README.md
core/assets/blocks/: debug.kdl
core/assets/entity/humanoid/: default.blend  default.blend1  first_person.blend  first_person.kdl
core/assets/entity/humanoid/textures/: default.kdl
core/assets/render_pass/: debug_subpass.json  depth_image.json  frame_image.json  root.json  root.kdl  world_subpass.json
core/assets/render_pass/attachments/: color_image.json  depth_image.json  frame_image.json
core/assets/render_pass/subpass/: egui.json  resolve_msaa.json  world.json
core/assets/shaders/debug/chunk_boundary/: fragment.kdl  vertex.glsl
core/assets/shaders/debug/colliders/: vertex.glsl
core/assets/shaders/entity/: fragment.glsl  vertex.glsl
core/assets/shaders/world/: fragment.glsl  vertex.glsl  vertex.kdl
core/assets/textures/blocks/debug/: all.xcf
core/assets/textures/ui/: Title.xcf
core/scripts/blender/: export_model.py
core/src/: block.rs  client.rs  commands.rs  common.rs  debug.rs  debug_commands.rs  entity.rs  graphics.rs  input.rs  lib.rs  loading.rs  network.rs  plugin.rs  server.rs  world.rs
core/src/account/: account.rs  client_registry.rs  key.rs  manager.rs  mod.rs
core/src/app/: mod.rs  state.rs
core/src/app/state/: storage.rs
core/src/block/: block.rs  lookup.rs  point.rs  side.rs
core/src/client/: account.rs  graphics.rs  model.rs  network.rs  physics.rs  update_camera_view.rs  world.rs
core/src/client/graphics/: line.rs  sectioned_buffer.rs
core/src/client/model/: blender.rs  gather_entities_to_render.rs  instance.rs  mesh.rs  player_model.rs  texture.rs
core/src/client/model/blender/: asset.rs  component.rs  model.rs  render.rs
core/src/client/physics/: render_colliders.rs
core/src/client/world/: chunk.rs
core/src/client/world/chunk/: cache.rs
core/src/commands/: command.rs  connect.rs  debug_window.rs  load_world.rs  network_connect.rs  network_load.rs  network_stop.rs  network_unload.rs  unload_world.rs
core/src/common/: account.rs  blender_model.rs  network.rs  physics.rs  utility.rs  world.rs
core/src/common/account/: account.rs  key.rs
core/src/common/network/: broadcast.rs  client_joined.rs  close_code.rs  connection.rs  connection_list.rs  handshake.rs  mode.rs  move_player.rs  replication.rs  storage.rs
core/src/common/network/connection/: event.rs  list.rs
core/src/common/network/handshake/: client.rs  identifier.rs  server.rs
core/src/common/network/move_player/: builder.rs  client.rs  identifier.rs  recv.rs  send.rs  server.rs
core/src/common/network/replication/: entity.rs  world.rs
core/src/common/network/task/: load.rs  state.rs  unload.rs
core/src/common/physics/: component.rs  phase.rs  state.rs  system.rs
core/src/common/physics/component/: collider.rs  orientation.rs  position.rs  rigidbody.rs
core/src/common/physics/phase/: add_objects.rs  copy_comp_to_phys.rs  copy_phys_to_comp.rs
core/src/common/physics/system/: add_objects.rs  copy_comp_to_phys.rs  copy_phys_to_comp.rs  object_id.rs  phase_add_objects.rs  phase_copy_phys_to_comp.rs  phase_simulate.rs  simulate.rs
core/src/common/utility/: data_file.rs  multi_hash_map.rs  vec_sectioned.rs
core/src/common/utility/vec_sectioned/: direction.rs  range_set.rs  section.rs  vec.rs
core/src/common/world/: chunk.rs  database.rs  point.rs
core/src/common/world/chunk/: chunk.rs
core/src/common/world/generator/: flat.rs
core/src/debug/: chunk_inspector.rs  command_window.rs  entity_inspector.rs  panel.rs
core/src/entity/: component.rs  system.rs
core/src/entity/archetype/: player.rs
core/src/entity/component/: binary.rs  camera.rs  chunk.rs  chunk_loader.rs  debug.rs  net.rs  net_relevance.rs  network.rs  orientation.rs  owned_by_account.rs  owned_by_connection.rs  position.rs  registry.rs  user.rs
core/src/entity/component/chunk/: relevancy.rs  ticket_owner.rs
core/src/entity/component/net/: owner.rs  registry.rs  replicated.rs
core/src/entity/component/network/: replicatable.rs  replicated.rs
core/src/entity/component/physics/: linear.rs
core/src/entity/system/: owned_by_connection.rs  physics.rs  player_controller.rs  replicator.rs  update_camera.rs  user_chunk_ticket_updater.rs
core/src/graphics/: chunk_boundary.rs  model.rs  procedure_config.rs  render_chunks.rs  voxel.rs
core/src/graphics/model/: mesh.rs
core/src/graphics/voxel/: atlas.rs  camera.rs  face.rs  flags.rs  instance.rs  model.rs  model_cache.rs  render.rs  tex_coord.rs  texture.rs  vertex.rs
core/src/network/: mod.rs  packet.rs  storage.rs
core/src/network/packet/: connection.rs  handshake.rs  mod.rs  move_player.rs  replicate_entity.rs  replicate_world.rs
core/src/network/storage/: client.rs  server.rs  storage.rs
core/src/network/task/: load.rs  state.rs  unload.rs
core/src/plugin/: config.rs  manager.rs  mod.rs  module.rs  plugin.rs
core/src/server/: mod.rs  network.rs  user.rs  world.rs
core/src/server/network/: cert_verification.rs  storage.rs
core/src/server/user/: active.rs  cache.rs  mod.rs  pending.rs  saved.rs  user.rs
core/src/server/world/: chunk.rs  database.rs  loader.rs  settings.rs
core/src/task/: network.rs
core/src/task/network/: load.rs  state.rs
core/src/ui/: _.rs  button.rs  hud.rs  loading.rs  mod.rs  root.rs  viewport.rs
core/src/ui/button/: styled.rs
core/src/ui/common/: mod.rs  root.rs
core/src/ui/home/: mod.rs
core/src/ui/launch/: mod.rs
core/src/ui/state/: flag.rs  mod.rs  props.rs  var.rs
core/src/world/: chunk.rs  database.rs  settings.rs  task.rs
core/src/world/chunk/: cache.rs  chunk.rs  level.rs  thread.rs  ticket.rs
core/src/world/generator/: flat.rs
core/src/world/task/: load.rs
editor/: Cargo.toml
editor/src/: blender_model.py  blender_model.rs  lib.rs  main.rs
editor/src/blender_model/: exporter.rs  point.rs  polygon.rs
editor/src/blender_model/exporter/: blender_data.rs  builder.rs  error.rs  script.py
editor/src/block/: block.rs
(+60 files in other folders)
