[package]
name = "crystal-sphinx"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = []
debug = []

[dependencies]
engine = { path = "../temportal-engine/engine", package = "temportal-engine" }
enumset = { version = "1.0", features = ["serde"] }
log = "0.4"
rand = "0.8"
rsa = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
