[package]
name = "crystal-sphinx"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = []
debug = []

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
crossbeam-channel = "0.5"
egui = "0.15"
engine = { path = "../temportal-engine/engine", package = "temportal-engine" }
enumset = { version = "1.0", features = ["serde"] }
hecs = { version = "0.7", features = ["serde"] }
kdl = "3.0"
kdl-schema = { path = "../temportal-engine/crates/kdl-schema" }
# [rust] async/future support in rust (for thinks like ongoing/background tasks)
futures = "0.3"
log = "0.4"
# [utility] for getting performance information and rendering via any chosen viewer
profiling = { version = "1.0", features = ["profile-with-tracy"] }
rand = "0.8"
# [serialization] expanded serialization support
rmp = "0.8"
# [serialization] expanded serialization support for serde
rmp-serde = "0.15"
rsa = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
multimap = "0.8"

# Networking
quinn = "0.8"
rustls = { version = "0.20", default-features = false, features = ["tls12", "dangerous_configuration"] }
futures-util = "0.3"
# Certificate management
rcgen = "0.8"
sha2 = "0.10"
base64ct = { version = "1.3", features = ["alloc"] }
rustls-pemfile = "0.2"
async-channel = "1.6"
ring = "0.16"
bincode = "1.3"
tokio = { version = "1.15", features = ["full"] }
thiserror = "1.0"
