[package]
name = "crystal-sphinx-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = []

[dependencies]
crystal-sphinx = { path = "../core" }
engine = { path = "../temportal-engine/engine", package = "temportal-engine" }
editor = { path = "../temportal-engine/editor", package = "temportal-engine-editor" }
log = "0.4.14"
rmp = "0.8"
rmp-serde = "0.15"
